<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="220dp"
        android:gravity="center_horizontal"
        tools:context=".MainActivity">
    <Button
            android:text="@string/click_me"
            android:layout_width="343dp"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="316dp"
            tools:layout_editor_absoluteX="40dp" android:id="@+id/data_id"/>
    <Button
            android:text="@string/take_a_picture"
            android:layout_width="343dp"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="413dp"
            tools:layout_editor_absoluteX="40dp" android:id="@+id/kamera_id"/>
    <Button
            android:text="@string/open_galery"
            android:layout_width="343dp"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="413dp"
            tools:layout_editor_absoluteX="40dp" android:id="@+id/galeri_id"/>
</LinearLayout>