<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NoData"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="220dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#4B4848"
            android:textSize="25sp"
            android:text="@string/greet"/>

    <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/edit_textdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#4B4848"
            android:hint="@string/type_something"/>

    <Button
            android:layout_marginTop="20dp"
            android:id="@+id/share_id"
            android:text="@string/share"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


</LinearLayout>